label box size calculated based on scale

--- a/examples/network/events/labelEvents.html
+++ b/examples/network/events/labelEvents.html
@@ -34,9 +34,11 @@
           circularImage: DIR + '1.png',
           ovrImgRatio: 0.6,
           label: "Click me for click event...",
+          title: 'tooltip 1',
         },
         {id: 2,  shape: 'circularImage', image: DIR + '2.png',
           label: 'Click to open google.com',
+          title: 'tooltip 2',
         },
         {id: 3,  shape: 'circularImage', image: DIR + '3.png'},
         {id: 4,  shape: 'circularImage', image: DIR + '4.png', label:"pictures by this guy!"},
