rain-2042: fixes issue for image url undefined

--- a/examples/network/nodeStyles/circularOverImage.html
+++ b/examples/network/nodeStyles/circularOverImage.html
@@ -29,7 +29,7 @@
       var DIR = '../img/indonesia/';
       var DIR2 = '../img/cluster-images/'
       nodes = [
-        {id: 1,  shape: 'circularOverImage', image: DIR2 + 'type.svg', 
+        {id: 1,  shape: 'circularOverImage', // image: DIR2 + 'type.svg', 
           circularImage: DIR + '1.png',
           ovrImgRatio: 0.6,
           label: "Circular Over Image",
