--- a/examples/network/nodeStyles/images.html
+++ b/examples/network/nodeStyles/images.html
@@ -31,7 +31,7 @@
       // Create a data table with links.
       edges = [];
 
-      nodes.push({id: 1, label: 'Main', image: DIR + 'Network-Pipe-icon.png', shape: 'image'});
+      nodes.push({id: 1, label: 'Main', /*image: DIR + 'Network-Pipe-icon.png',*/ shape: 'image'});
       nodes.push({id: 2, label: 'Office', image: DIR + 'Network-Pipe-icon.png', shape: 'image'});
       nodes.push({id: 3, label: 'Wireless', image: DIR + 'Network-Pipe-icon.png', shape: 'image'});
       edges.push({from: 1, to: 2, length: EDGE_LENGTH_MAIN});
